...
  <string name="exploration_activity_title">Exploration Player</string>
  <string name="play_exploration_button_text">Play exploration</string>
  <string name="help_activity_title">Help</string>
  <string name="bottom_sheet_options_menu_close">Close</string>
  <string name="menu_switch_profile">Switch Profile</string>
  <string name="developer_options">Developer Options</string>
  <string name="administrator_controls">Administrator Controls</string>
  <string name="drawer_open_content_description">Navigation Menu Open</string>
  <string name="drawer_close_content_description">Navigation Menu Close</string>
  <string name="audio_play_description">Play audio</string>
  <string name="audio_pause_description">Pause audio</string>
  <string name="audio_unavailable_in_selected_language">%s audio is unavailable.</string>
  <string name="audio_language_select_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
...
    <item quantity="one">1 Topic in Progress</item>
    <item quantity="other">%s Topics in Progress</item>
  </plurals>
  <string name="bar_separator">\u0020|\u0020</string>
  <!-- ProfileChooserFragment -->
  <string name="profile_chooser_activity_label">Profile selection page</string>
  <string name="profile_chooser_admin">Administrator</string>
  <string name="profile_chooser_select">Select your profile</string>
  <string name="profile_chooser_add">Add Profile</string>
  <string name="set_up_multiple_profiles">Set up Multiple Profiles</string>
  <string name="set_up_multiple_profiles_description">Add up to 10 users to your account. Perfect for families and classrooms.</string>
  <string name="profile_chooser_administrator_controls">Administrator Controls</string>
  <string name="profile_chooser_language">Language</string>
  <string name="profile_selection_header">Select your profile to explore the lessons</string>
  <string name="profile_selection_profile_icon_description">User\'s profile picture</string>
  <string name="profile_selection_add_icon_description">Add another profile</string>
...
  <string name="profile_selection_admin_label">Administrator</string>
  <string name="profile_selection_scroll_left_content_description">Scroll left</string>
  <string name="profile_selection_scroll_right_content_description">Scroll right</string>
  <string name="profile_selection_administrator_controls">Administrator Controls</string>

  <!-- AdminAuthActivity -->
  <string name="admin_auth_toolbar">Administrator Controls</string>
  <string name="admin_auth_activity_add_profiles_title">Authorise to add profiles</string>
  <string name="admin_auth_activity_access_controls_title">Authorise to access Administrator Controls</string>
  <string name="admin_auth_heading">Administrator Authorization Required</string>
  <string name="admin_auth_sub">Enter the Administrator PIN in order to create a new account.</string>
  <string name="admin_auth_admin_controls_sub">Enter the Administrator PIN in order to access Administrator Controls.</string>
  <string name="admin_auth_pin">Administrator\'s PIN</string>
  <string name="admin_auth_incorrect">Incorrect Administrator PIN. Please try again.</string>
  <string name="admin_auth_null">Please enter Administrator PIN.</string>
  <string name="admin_auth_submit">Submit</string>
  <string name="admin_auth_close">Close</string>
  <!-- AdminPinActivity -->
...
  <string name="admin_pin_error_pin_length">Your PIN should be 5 digits long.</string>
  <string name="admin_pin_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
  <string name="save">Save</string>
  <string name="admin_pin_activity_title">Authorise to add profiles</string>
  <!-- AddProfileActivity -->
  <string name="add_profile_activity_label">Add Profile</string>
  <string name="add_profile_title">Add Profile</string>
  <string name="add_profile_input_name">Name</string>
  <string name="add_profile_input_pin">3-Digit PIN</string>
  <string name="add_profile_input_confirm_pin">Confirm 3-Digit PIN</string>
  <string name="add_profile_allow_download_heading">Allow Download Access</string>
  <string name="add_profile_allow_download_sub">User is able to download and delete content without Administrator PIN.</string>
  <string name="add_profile_create_btn">Create</string>
...
  <string name="my_downloads_activity_title">My Downloads</string>
  <string name="tab_downloads">Downloads</string>
  <string name="tab_updates">Updates (2)</string>
  <!-- HomeActivityBackDialog -->
  <string name="home_activity_back_dialog_message">Would you like to exit your profile?</string>
  <string name="home_activity_back_dialog_cancel">Cancel</string>
  <string name="home_activity_back_dialog_exit">Exit</string>
  <!-- HomeActivity -->
  <string name="home_activity_title">Home</string>
  <string name="promoted_story_spotlight_hint">From now, you can see lessons recommended for you here.</string>
  <string name="select_a_topic_to_start">Select a Topic to Start</string>
  <!--  ClassroomListActivity-->
  <string name="classroom_list_activity_title">Home</string>
  <string name="classrooms_list_activity_section_header">Classrooms</string>
  <!-- ProfileListActivity -->
  <string name="profile_list_activity_title">Profiles</string>
  <!-- ProfileEditActivity -->
  <string name="profile_edit_activity_title">Edit Profile</string>
  <string name="profile_edit_created">Created on %s</string>
  <string name="profile_last_used">Last used </string>
  <string name="profile_edit_rename">Rename</string>
  <string name="profile_edit_reset">Reset PIN</string>
  <string name="profile_edit_mark_chapter_completion">Mark Chapters Completed</string>
  <string name="profile_edit_enable_quick_lesson_language_switching_label">Enable Quick Language Switching</string>
  <string name="profile_edit_enable_quick_lesson_language_switching_explanation">Allow this user to quickly switch between English and Swahili within a lesson.</string>
  <string name="profile_edit_delete">Profile Deletion</string>
...
  <string name="link_to_item_below">Link to item %s</string>
  <string name="unlink_items">Unlink items at %s</string>
  <string name="move_item_down_content_description">Move item down to %s</string>
  <string name="move_item_up_content_description">Move item up to %s</string>
  <string name="up_button_disabled">Up</string>
  <string name="down_button_disabled">Down</string>
  <string name="profile_last_visited">%1$s %2$s</string>
  <plurals name="minutes_ago">
    <item quantity="one">a minute ago</item>
    <item quantity="other">%s minutes ago</item>
  </plurals>
  <plurals name="hours_ago">
    <item quantity="one">an hour ago</item>
...
