...

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:id="@+id/add_profile_item"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="@{hasProfileEverBeenAddedValue ? Gravity.CENTER_HORIZONTAL : Gravity.CENTER_VERTICAL}"
      android:orientation="@{hasProfileEverBeenAddedValue ? LinearLayout.VERTICAL : LinearLayout.HORIZONTAL}"
      app:layoutMarginEnd="@{hasProfileEverBeenAddedValue ? @dimen/profile_chooser_add_view_margin_end_profile_already_added : @dimen/profile_view_not_added_margin}"
      app:layoutMarginStart="@{hasProfileEverBeenAddedValue ? @dimen/profile_chooser_add_view_margin_start_profile_already_added : @dimen/profile_view_not_added_margin}"
...
        android:orientation="vertical"
        android:paddingStart="@{hasProfileEverBeenAddedValue ? @dimen/space_0dp : @dimen/profile_chooser_description_margin_start_profile_not_added}"
        android:paddingEnd="@{hasProfileEverBeenAddedValue ? @dimen/space_0dp : @dimen/profile_chooser_description_margin_end_profile_not_added}"
        app:layoutMarginTop="@{hasProfileEverBeenAddedValue ? @dimen/profile_view_already_added_description_parent_margin_top : @dimen/space_0dp}">

        <TextView
          android:id="@+id/add_profile_text"
          style="@style/Caption"
          android:text="@{hasProfileEverBeenAddedValue ? @string/profile_chooser_fragment_add_text : @string/profile_chooser_fragment_set_up_multiple_profiles}"
          android:textColor="@color/component_color_shared_secondary_4_text_color" />

        <TextView
          android:id="@+id/add_profile_description_text"
          style="@style/TextViewStart"
          android:layout_marginTop="4dp"
          android:fontFamily="sans-serif"
          android:text="@string/profile_chooser_fragment_add_profile_description_text"
          android:textAlignment="viewStart"
          android:textColor="@color/component_color_shared_secondary_4_text_color"
...
