...
      app:profileImageSource="@{viewModel.profile.avatar}"
      app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedShape"
      app:strokeColor="@color/component_color_profile_icon_stroke_color"
      app:strokeWidth="@dimen/profile_item_profile_picture_stroke_width" />

    <TextView
      android:id="@+id/profile_name_text"
      style="@style/Caption"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/profile_chooser_profile_view_name_margin_top_profile_already_added"
      android:ellipsize="end"
      android:maxLines="2"
      android:singleLine="false"
...
      android:textSize="12sp"
      android:textStyle="italic"
      android:visibility="@{viewModel.profile.lastLoggedInTimestampMs > 0 ? View.VISIBLE : View.GONE}"
      app:profileLastVisitedTime="@{viewModel.profile.lastLoggedInTimestampMs}" />

    <TextView
      android:id="@+id/profile_is_admin_text"
      style="@style/AdministratorLabelStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/profile_chooser_admin"
      android:visibility="@{viewModel.profile.isAdmin ? View.VISIBLE : View.GONE}" />
  </LinearLayout>
...
