...
          android:text="@string/profile_chooser_select"
          android:textColor="@color/component_color_shared_secondary_4_text_color"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/profile_recycler_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginStart="32dp"
          android:layout_marginTop="@dimen/profile_chooser_fragment_profile_recycler_view_margin_top"
          android:layout_marginEnd="32dp"
          android:clipToPadding="false"
...
      android:background="@drawable/profile_chooser_gradient"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
      android:id="@+id/administrator_controls_linear_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="@{(v) -> viewModel.onAdministratorControlsButtonClicked()}"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent">
...
